--- a/pom.xml
+++ b/pom.xml
@@ -21,18 +21,21 @@
       <artifactId>selenium-java</artifactId>
       <version>4.27.0</version>
     </dependency>
+
     <!-- TestNG -->
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>7.10.2</version>
     </dependency>
+
     <!-- WebDriverManager -->
     <dependency>
       <groupId>io.github.bonigarcia</groupId>
       <artifactId>webdrivermanager</artifactId>
       <version>5.9.2</version>
     </dependency>
+
     <!-- Allure TestNG -->
     <dependency>
       <groupId>io.qameta.allure</groupId>
@@ -52,18 +55,34 @@
           <target>8</target>
         </configuration>
       </plugin>
-      <!-- Maven Surefire Plugin -->
+
+      <!-- Maven Surefire Plugin for running tests -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M8</version>
         <configuration>
           <systemPropertyVariables>
+            <!-- Allure results directory -->
             <allure.results.directory>target/allure-results</allure.results.directory>
           </systemPropertyVariables>
         </configuration>
       </plugin>
+
+      <!-- Allure Maven Plugin to generate report -->
+      <plugin>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-maven</artifactId>
+        <version>2.8</version> <!-- En son sürümü kullanabilirsiniz -->
+        <executions>
+          <execution>
+            <goals>
+              <goal>serve</goal> <!-- serve komutu raporu açar -->
+              <!-- Eğer raporu sadece oluşturmak isterseniz, <goal>report</goal> kullanabilirsiniz -->
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
-
 </project>
